<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avtivity_title_height"
        android:background="@color/titlebar_backgournd" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/fragment_contacts_title"
            android:textColor="@color/titlebar_text_color"
            android:textSize="@dimen/avtivity_title_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addContactMenu"
            android:layout_width="@dimen/fragment_rel_imagebutton_width"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/addcontacts" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title" >
		<include 
		    layout="@layout/fragment_contact_sort_list"
        	android:id="@+id/include_sort_contact_layout"/>
   </RelativeLayout>

    <LinearLayout
        android:id="@+id/rel_add_menu"
        android:layout_width="@dimen/fragment_rel_menu_height"
        android:layout_height="@dimen/fragment_rel_menu_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_margin="5dp"
        android:background="#000000"
        android:orientation="vertical" >

        <Button
            android:id="@+id/add_contact"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:background="#00000000"
            android:text="@string/fragment_contacts_text_add_contact"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/import_local_contact"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:background="#00000000"
            android:text="@string/fragment_contacts_text_import_local_contact"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/importFile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:background="#00000000"
            android:text="@string/fragment_contacts_text_import_contact"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>