<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avtivity_title_height"
        android:background="@color/titlebar_backgournd" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/fragment_setting_title"
            android:textColor="@color/titlebar_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/setting_sms_content_rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_setting_rel_height" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fragment_setting_sms_content"
                android:textColor="@color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cut_off_rule_color" />

        <RelativeLayout
            android:id="@+id/setting_time_rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_setting_rel_height" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/time_send_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fragment_setting_send_time"
                    android:textColor="@color/black" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/hourwheel"
                    android:layout_width="@dimen/fragment_setting_whell_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cut_off_rule_color" />

        <RelativeLayout
            android:id="@+id/setting_switch_rel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_setting_rel_height" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/setting_switch_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fragment_setting_switch"
                    android:textColor="@color/black" />

                <com.chen.autosendsms.ui.view.CheckSwitchButton
                    android:id="@+id/setting_switch_btn"
                    android:layout_width="@dimen/fragment_setting_whell_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:enabled="true" />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cut_off_rule_color" />
    </LinearLayout>

</RelativeLayout>