<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avtivity_title_height"
        android:background="@color/titlebar_backgournd" >
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/fragment_add_contact_title"
            android:textStyle="bold"
            android:textColor="@color/titlebar_text_color"
            android:textSize="@dimen/avtivity_title_text_size" />
        <Button
            android:id="@+id/ok"
            android:layout_width="@dimen/avtivity_title_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/titlebar_backgournd"
            android:gravity="center"
            android:textColor="@color/titlebar_text_color"
            android:text="@string/fragment_add_contact_button" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_add_contact_rel_height"
            android:layout_marginTop="@dimen/fragment_add_contact_rel_margin_top"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="50dp"
                android:layout_height="@dimen/fragment_add_contact_rel_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/fragment_add_contact_text_lasttname"
                android:textColor="#000000"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView1"
                android:background="@drawable/bg_edittext"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:imeOptions="actionNext"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_add_contact_rel_height"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/fragment_add_contact_text_firsttname"
                android:textColor="#000000"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView2"
                android:background="@drawable/bg_edittext"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:imeOptions="actionNext"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_add_contact_rel_height"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/fragment_add_contact_text_phone"
                android:textColor="#000000"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView3"
                android:background="@drawable/bg_edittext"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxLength="11"
                android:imeOptions="actionDone"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_add_contact_rel_wheel"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:text="@string/fragment_add_contact_text_birthday"
                android:textColor="#000000"
                android:textSize="@dimen/fragment_add_contact_rel_text_size" />

            <LinearLayout
                android:id="@+id/birthday_lin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView4"
                android:orientation="horizontal">

                <com.chen.autosendsms.ui.view.wheel.WheelView
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <com.chen.autosendsms.ui.view.wheel.WheelView
                    android:id="@+id/month"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <com.chen.autosendsms.ui.view.wheel.WheelView
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>